--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,1 @@
-# Start with blank slate
-*
-
-# Include main & tests project files
-!nuget.config
-!/TenureInformationApi*
-!/TenureInformationApi*/**
-
-# Exclude build artifacts
-**/bin
-**/obj
+sonar-project.properties
