--- a/TenureInformationApi.Tests/Dockerfile
+++ b/TenureInformationApi.Tests/Dockerfile
@@ -48,5 +48,8 @@ RUN dotnet build ./TenureInformationApi/TenureInformationApi.csproj --no-restore
 RUN dotnet build ./TenureInformationApi.Tests/TenureInformationApi.Tests.csproj --no-restore
 
 CMD dotnet test ./TenureInformationApi.Tests/TenureInformationApi.Tests.csproj --no-build --collect:"XPlat Code Coverage" --results-directory ./coverage \
+    && ls . \
+    && ls coverage \
+    && cat coverage/SonarQube.xml \
     && reportgenerator "-reports:./coverage/*/coverage.cobertura.xml" "-targetdir:coverage" "-reporttypes:SonarQube" "-verbosity:Off" \
     && (dotnet sonarscanner end /d:sonar.login="${SONAR_TOKEN}" > /dev/null)
