--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -267,9 +267,9 @@ workflows:
     jobs:
       - check-code-formatting:
           context: api-nuget-token-context
-          filters:
-            branches:
-              only: master
+          # filters:
+          #   branches:
+          #     only: master
       - build-and-test:
           context:
             - api-nuget-token-context
