--- a/TenureInformationApi/serverless.yml
+++ b/TenureInformationApi/serverless.yml
@@ -16,12 +16,9 @@ plugins:
 package:
   artifact: ./bin/release/net6.0/tenure-information-api.zip
 functions:
-  hello:
+  dynamodbStreamPoc:
+    name: dynamodb-stream-poc
     handler: handler.hello
-  # dynamodb-stream-poc:
-  # index:
-  #   name: dynamodb-stream-poc
-  #   handler: handler.hello
   TenureInformationApi:
     name: ${self:service}-${self:provider.stage}
     handler: TenureInformationApi::TenureInformationApi.LambdaEntryPoint::FunctionHandlerAsync
