--- a/TenureInformationApi/serverless.yml
+++ b/TenureInformationApi/serverless.yml
@@ -16,9 +16,9 @@ plugins:
 package:
   artifact: ./bin/release/net6.0/tenure-information-api.zip
 functions:
-  dynamodbStreamPoc:
+  DynamodbStreamPoc:
     name: dynamodb-stream-poc
-    handler: handler.hello
+    handler: DynamodbStreamPoc.hello
   TenureInformationApi:
     name: ${self:service}-${self:provider.stage}
     handler: TenureInformationApi::TenureInformationApi.LambdaEntryPoint::FunctionHandlerAsync
