--- a/TenureInformationApi/serverless.yml
+++ b/TenureInformationApi/serverless.yml
@@ -18,7 +18,7 @@ package:
 functions:
   DynamodbStreamPoc:
     name: dynamodb-stream-poc
-    handler: TenureInformationApi::TenureInformationApi.Handler::DynamodbStreamPoc
+    handler: TenureInformationApi::TenureInformationApi.LambdaEntryPoint::DynamodbStreamPoc
   TenureInformationApi:
     name: ${self:service}-${self:provider.stage}
     handler: TenureInformationApi::TenureInformationApi.LambdaEntryPoint::FunctionHandlerAsync
