--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,7 +114,8 @@ commands:
       - run:
           name: Install Node.js
           command: |
-            apt-get update && apt-get install -y nodejs npm
+            # apt-get update && apt-get install -y nodejs npm
+            sudo apt-get install -y nodejs
       - run:
           name: Install serverless CLI
           command: npm i -g serverless@^3
