--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,8 +114,8 @@ commands:
       - run:
           name: Install Node.js
           command: |
-            # apt-get update && apt-get install -y nodejs npm
-            sudo apt-get install -y nodejs
+            # apt-get update && 
+            apt-get install -y nodejs npm
       - run:
           name: Install serverless CLI
           command: npm i -g serverless@^3
