--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,7 +114,7 @@ commands:
       - run:
           name: Install Node.js
           command: |
-            # apt-get update && 
+            apt-get update 
             apt-get install -y nodejs npm
       - run:
           name: Install serverless CLI
