--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,6 +116,7 @@ commands:
           command: |
             apt-get update 
             apt-get install -y nodejs 
+            npm
       - run:
           name: Install serverless CLI
           command: npm i -g serverless@^3
