--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,7 +116,7 @@ commands:
           command: |
             apt-get update 
             apt-get install -y nodejs 
-            npm
+            npm install
       - run:
           name: Install serverless CLI
           command: npm i -g serverless@^3
