--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,8 +114,8 @@ commands:
       - run:
           name: Install Node.js
           command: |
-            curl -fsSL https://deb.nodesource.com/setup_20.x | bash -
-            apt-get install -y nodejs 
+            curl -sL https://deb.nodesource.com/setup_20.x | bash -
+            apt-get update && apt-get install -y nodejs
       - run:
           name: install npm
           command: npm install
