--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,7 +115,7 @@ commands:
           name: Install Node.js
           command: |
             curl -sL https://deb.nodesource.com/setup_20.x | bash -
-            apt-get update && apt-get install -y nodejs npm 
+            apt-get update && apt-get install -y nodejs
       - run:
           name: Install serverless CLI
           command: npm i -g serverless@^3
