--- a/TenureInformationApi/serverless.yml
+++ b/TenureInformationApi/serverless.yml
@@ -116,6 +116,14 @@ resources:
                   Action:
                     - "lambda:InvokeFunction"
                   Resource: "*"
+          - PolicyName: iam
+              Version: '2012-10-17'
+                Statement:
+                  - Effect: Allow
+                    Action:
+                      - "iam:GetRecords"
+                      - "iam:GetShardIterator"
+                    Resource: "*"
           - PolicyName: dynamoDBAccess
             PolicyDocument:
               Version: '2012-10-17'
@@ -133,8 +141,6 @@ resources:
                     - "dynamodb:Query"
                     - "dynamodb:Scan"
                     - "dynamodb:UpdateItem"
-                    - "iam:GetRecords"
-                    - "iam:GetShardIterator"
                   Resource:
                     - 'Fn::Join':
                         - ':'
