--- a/TenureInformationApi/serverless.yml
+++ b/TenureInformationApi/serverless.yml
@@ -126,6 +126,11 @@ resources:
                     - "iam:ListStreams"
                     - "iam:GetRecords"  
                     - "iam:GetShardIterator"
+                    - "dynamodb:DescribeStream"
+                    - "dynamodb:ListStreams"
+                    - "dynamodb:GetRecords"
+                    - "dynamodb:GetShardIterator"
+
                   Resource: "*"
           - PolicyName: dynamoDBAccess
             PolicyDocument:
