--- a/TenureInformationApi/serverless.yml
+++ b/TenureInformationApi/serverless.yml
@@ -126,10 +126,10 @@ resources:
                     - "iam:ListStreams"
                     - "iam:GetRecords"  
                     - "iam:GetShardIterator"
-                    - "dynamodb:DescribeStream"
-                    - "dynamodb:ListStreams"
-                    - "dynamodb:GetRecords"
-                    - "dynamodb:GetShardIterator"
+                    # - "dynamodb:DescribeStream"
+                    # - "dynamodb:ListStreams"
+                    # - "dynamodb:GetRecords"
+                    # - "dynamodb:GetShardIterator"
 
                   Resource: "*"
           - PolicyName: dynamoDBAccess
