--- a/TenureInformationApi/serverless.yml
+++ b/TenureInformationApi/serverless.yml
@@ -128,7 +128,7 @@ resources:
                         - - 'arn:aws:dynamodb'
                           - Ref: 'AWS::Region'
                           - Ref: 'AWS::AccountId'
-                          - 'table/TenureInformation'
+                          - 'table/TenureInformation/stream/*'
           - PolicyName: dynamoDBAccess
             PolicyDocument:
               Version: '2012-10-17'
